[gd_scene load_steps=35 format=2]

[ext_resource path="res://Menu.tres" type="Theme" id=1]
[ext_resource path="res://assets/gameover.png" type="Texture" id=2]
[ext_resource path="res://assets/menuBackground.png" type="Texture" id=3]
[ext_resource path="res://assets/tetrawave_logo.png" type="Texture" id=4]
[ext_resource path="res://assets/retrowaveBackground/frame20.png" type="Texture" id=5]
[ext_resource path="res://assets/retrowaveBackground/frame17.png" type="Texture" id=6]
[ext_resource path="res://assets/retrowaveBackground/frame22.png" type="Texture" id=7]
[ext_resource path="res://assets/retrowaveBackground/frame18.png" type="Texture" id=8]
[ext_resource path="res://assets/retrowaveBackground/frame19.png" type="Texture" id=9]
[ext_resource path="res://assets/retrowaveBackground/frame21.png" type="Texture" id=10]
[ext_resource path="res://assets/retrowaveBackground/frame3.png" type="Texture" id=11]
[ext_resource path="res://assets/retrowaveBackground/frame10.png" type="Texture" id=12]
[ext_resource path="res://assets/retrowaveBackground/frame4.png" type="Texture" id=13]
[ext_resource path="res://assets/retrowaveBackground/frame11.png" type="Texture" id=14]
[ext_resource path="res://assets/retrowaveBackground/frame8.png" type="Texture" id=15]
[ext_resource path="res://assets/retrowaveBackground/frame14.png" type="Texture" id=16]
[ext_resource path="res://assets/retrowaveBackground/frame16.png" type="Texture" id=17]
[ext_resource path="res://assets/retrowaveBackground/frame13.png" type="Texture" id=18]
[ext_resource path="res://assets/retrowaveBackground/frame7.png" type="Texture" id=19]
[ext_resource path="res://assets/retrowaveBackground/frame6.png" type="Texture" id=20]
[ext_resource path="res://assets/retrowaveBackground/frame9.png" type="Texture" id=21]
[ext_resource path="res://assets/retrowaveBackground/frame1.png" type="Texture" id=22]
[ext_resource path="res://assets/retrowaveBackground/frame2.png" type="Texture" id=23]
[ext_resource path="res://assets/retrowaveBackground/frame15.png" type="Texture" id=24]
[ext_resource path="res://assets/retrowaveBackground/frame5.png" type="Texture" id=25]
[ext_resource path="res://assets/retrowaveBackground/frame12.png" type="Texture" id=26]
[ext_resource path="res://src/Main.gd" type="Script" id=27]
[ext_resource path="res://assets/next.png" type="Texture" id=28]
[ext_resource path="res://assets/sounds/menu_music.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/levelup.png" type="Texture" id=30]
[ext_resource path="res://assets/fonts/Road_Rage.ttf" type="DynamicFontData" id=32]
[ext_resource path="res://assets/GameFieldCells.tscn" type="PackedScene" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 32 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 27 )

[node name="bg_animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 8
playing = true
centered = false

[node name="Game" type="Node2D" parent="."]
visible = false

[node name="UI" type="Node2D" parent="Game"]

[node name="Next" type="Node2D" parent="Game/UI"]
position = Vector2( -25, -116 )

[node name="next_figure" parent="Game/UI/Next" instance=ExtResource( 34 )]
position = Vector2( 1259, 198 )
number_of_rows = 2
number_of_cells_in_row = 4

[node name="Next" type="Sprite" parent="Game/UI/Next"]
position = Vector2( 1359, 244 )
texture = ExtResource( 28 )

[node name="text_info" type="Label" parent="Game/UI"]
margin_left = 1236.0
margin_top = 227.0
margin_right = 1397.0
margin_bottom = 401.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0
Lines: 0
Level: 1"

[node name="Effects" type="Node2D" parent="Game"]
visible = false

[node name="levelup" type="Sprite" parent="Game/Effects"]
position = Vector2( 960, 540 )
texture = ExtResource( 30 )

[node name="GameField" type="Node2D" parent="Game"]
position = Vector2( 700, 50 )

[node name="gamefield_bg" type="ColorRect" parent="Game/GameField"]
margin_right = 500.0
margin_bottom = 978.0
color = Color( 0, 0.443137, 0.501961, 1 )

[node name="GameFieldCells" parent="Game/GameField" instance=ExtResource( 34 )]
number_of_rows = 20
number_of_cells_in_row = 10

[node name="Menu" type="Node2D" parent="."]

[node name="bg_gameover" type="Sprite" parent="Menu"]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="bg_menu" type="Sprite" parent="Menu"]
texture = ExtResource( 3 )
centered = false

[node name="logo" type="Sprite" parent="Menu"]
position = Vector2( 49, 33 )
scale = Vector2( 0.480417, 0.480417 )
texture = ExtResource( 4 )
centered = false

[node name="menu_options" type="ItemList" parent="Menu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 69.0
margin_top = 362.0
margin_right = 790.0
margin_bottom = 757.5
rect_clip_content = false
theme = ExtResource( 1 )
custom_colors/font_color_selected = Color( 0.921569, 0, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
items = [ "Start game", null, false, "Settings", null, false, "Exit", null, false ]
allow_reselect = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
autoplay = true

[node name="SoundsPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="item_activated" from="Menu/menu_options" to="." method="_on_menu_options_item_activated"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
